# restriction_bot

./: Dockerfile  compose.yaml  pyproject.toml
src/: main.py
src/config/: __init__.py  config.py
src/handlers/: __init__.py  restriction.py  test.py
