[tool.poetry]
name = "bot-template"
version = "0.1.0"
description = ""
authors = ["n.kanunnikov"]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.20.0.post0"
pydantic-settings = "^2.9.1"

[tool.poetry.dev-dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"

[tool.flake8]
max-line-length = 90
ignore = ["E203", "E266", "E501", "W503"]
exclude = [".git", "__pycache__", "build", "dist"]

[tool.black]
line_length = 90
exclude = '''
/(
\.git
| .gitignore
| data
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
